--- a/blog-details.html
+++ b/blog-details.html
@@ -283,8 +283,11 @@
                     <div class="container">
                         <div class="content" data-scroll data-scroll-delay="0.1" data-scroll-speed="2">
                             <p class="typ">UX Best Practices</p>
-                            <h1>
-                                WHAT IS EXPERIENCE DESIGN, AND HOW IS IT DIFFERENT FROM USER EXPERIENCE DESIGN (UX)?
+                            <h1 class="text-rveal">
+                                <span class="header_title_line"><span>WHAT IS EXPERIENCE DESIGN, AND</span> </span><span
+                                    class="header_title_line"> <span>HOW IS IT DIFFERENT FROM USER</span>
+                                </span><span class="header_title_line"><span>EXPERIENCE
+                                        DESIGN (UX)?</span>
                             </h1>
                             <div class="blog-flex">
                                 <div class="date">
@@ -310,88 +313,136 @@
                         </div>
                     </div>
                 </section>
-                <img src="/assets/resources/img/blog-element/Blog-001.png" class="blog-hero" alt="blog" />
+                <div class="hro-img" data-scroll="">
+                    <img src="/assets/resources/img/blog-element/Blog-001.png" class="blog-hero" alt="blog" />
+                </div>
                 <div class="overlap-text">
                     <p data-scroll="" data-scroll-speed="9" data-scroll-direction="horizontal">Experience Design & User
                         Experience Design</p>
                 </div>
-                <section class="blog-d" data-humcolor="#000">
+                <section class="blog-d" data-humcolor="#000" data-scroll="">
                     <div class="container">
-                        <div class="content">
-                            <p class="blog-prha">Over the past few years, the term Experience Design and User Experience
-                                have become so closely associated that they're often used interchangeably. They're
-                                interconnected, but they're not identical. And that disparity means there are vital
-                                differences between them.</p>
-                            <p><strong>Donalad Arthur Norman</strong>
-                                coined the term ‘User Experience Design’ while employed at Apple as a User Interface
-                                Architect. Sometime during the early 1990s, he decided to change his title to User
-                                Experience Architect. Why did he do it? In Don’s own words -
+                        <div class="content text_anim">
+                            <p class="blog-prha">
+                                <span>
+                                    Over the past few years, the term Experience Design and User Experience
+                                    have become so closely associated that they're often used interchangeably. They're
+                                    interconnected, but they're not identical. And that disparity means there are vital
+                                    differences between them.
+                                </span>
+                            </p>
+                            <p>
+                                <span>
+                                    <strong>Donalad Arthur Norman</strong>
+                                    coined the term ‘User Experience Design’ while employed at Apple as a User Interface
+                                    Architect. Sometime during the early 1990s, he decided to change his title to User
+                                    Experience Architect. Why did he do it? In Don’s own words -
+                                </span>
                             </p>
                         </div>
-                        <blockquote>
+                        <blockquote class="text_anim">
                             <p>
-                                “I invented the term because I thought Human Interface and usability were too narrow: I
-                                wanted to cover all aspects of the person’s experience with a system, including
-                                industrial
-                                design, graphics, the interface, the physical interaction, and the manual.”
+                                <span>
+                                    “I invented the term because I thought Human Interface and usability were too
+                                    narrow: I
+                                    wanted to cover all aspects of the person’s experience with a system, including
+                                    industrial
+                                    design, graphics, the interface, the physical interaction, and the manual.”
+                                </span>
                             </p>
                         </blockquote>
                 </section>
 
                 <div class="container" style="margin-bottom: 10%;">
-                    <div class="flex justify-center">
-                        <div class="blog-left">
+                    <div class="flex justify-center" data-scroll="">
+                        <div class="blog-left" data-scroll="">
                             <!-- <h2>What Is Contrast </h2> -->
-                            <div class="p-img">
+                            <div class="p-img o-image" data-scroll="">
                                 <img src="/assets/resources/img/blog-element/Blog-002.png" />
                             </div>
                         </div>
-                        <div class="blog-right">
-                            <div class="p-img">
+                        <div class="blog-right" data-scroll="">
+                            <div class="p-img o-image" data-scroll="">
                                 <img src="/assets/resources/img/blog-element/Blog-003.png" />
                             </div>
                         </div>
                     </div>
                 </div>
-                <div class="blog-conent">
-                    <p>The term User Experience Design was not coined until the early 1990s, but examples of Experience
-                        Design date back even earlier. For instance, Walt Disney is often regarded as one of the world’s
-                        first Experience Designer because of his theme parks and resorts.</p>
-                    <p>Walt Disney had the vision to create an amusement park that was fun for both children and adults
-                        alike. However, during the 1950s, amusement parks were seen as dirty and dowdy places where
-                        children shouldn’t go. Walt Dis¬ney wanted to change that perception and provide park-goers with
-                        a positive experience. The designers and engineers put a lot of thought and contemplation into
-                        the park (“Disney Imagineers”).
+                <div class="blog-conent" data-scroll="">
+                    <p class="text_anim">
+                        <span>
+                            The term User Experience Design was not coined until the early 1990s, but examples of
+                            Experience
+                            Design date back even earlier. For instance, Walt Disney is often regarded as one of the
+                            world’s
+                            first Experience Designer because of his theme parks and resorts.
+                        </span>
+
+                    </p>
+                    <p class="text_anim">
+                        <span>Walt Disney had the vision to create an amusement park that was fun for both children and
+                            adults
+                            alike. However, during the 1950s, amusement parks were seen as dirty and dowdy places where
+                            children shouldn’t go. Walt Dis¬ney wanted to change that perception and provide park-goers
+                            with
+                            a positive experience. The designers and engineers put a lot of thought and contemplation
+                            into
+                            the park (“Disney Imagineers”).</span>
                     </p>
                 </div>
 
-                <div class="blog-conent">
-                    <p>An example of good experience design at the parks is the variety of choices that visitors can
-                        select from. The parks were designed to appeal to all kinds of guests. Whether you’re a teenager
-                        looking for thrill-seeking rides or a young family wanting to ride Dumbo the flying elephant or
-                        the teacup ride, there’s something for everyone here.</p>
-                    <h2>So, what precisely is the difference between Experience Design & User Experience?</h2>
-                    <p>
-                        Well, most people believe it’s a debate about semantics. But we beg to differ.
+                <div class="blog-conent" data-scroll="">
+                    <p class="text_anim">
+                        <span>
+                            An example of good experience design at the parks is the variety of choices that visitors
+                            can
+                            select from. The parks were designed to appeal to all kinds of guests. Whether you’re a
+                            teenager
+                            looking for thrill-seeking rides or a young family wanting to ride Dumbo the flying elephant
+                            or
+                            the teacup ride, there’s something for everyone here.
+                        </span>
+                    </p>
+                    <h2 class="text_anim">
+                        <span>So, what precisely is the difference between Experience Design & User Experience?</span>
+                    </h2>
+                    <p class="text_anim">
+                        <span>
+                            Well, most people believe it’s a debate about semantics. But we beg to differ.
+                        </span>
                     </p>
                 </div>
-                <div class="container blg" style="margin-top: 3%;" data-scroll data-scroll-delay="0.1"
+                <div class="container blg o-image" style="margin-top: 3%;" data-scroll data-scroll-delay="0.1"
                     data-scroll-speed="2" data-scroll-offset="100">
                     <img src="/assets/resources/img/blog-element/Blog-004.png" style="width: 100%;" />
                 </div>
-                <div class="blog-conent">
-                    <p>In contrast, Experience design (XD) follows a more comprehensive directive. Experience Design is
-                        a discipline that creates expansive experiences for each & every user in all aspects of a
-                        product, service, or occasion. It looks at digital, physical, and indirect (family member,
-                        friends, family member) experiences from the end-user’s perspective. Experience design involves
-                        technology but generally considers more elements (like technology, environmental factors,
-                        spatial factors, physical objects) into consideration. Experience designers are holistic problem
-                        solvers who look at the entire brand ecosystem and focus on ‘moments of engagement, touchpoints,
-                        between people, and the ideas, feelings, and memories that these interactions create.’</p>
-                    <p>To summarise, the practice of User Experience (UX) Design focuses primarily on the digital world,
-                        and Experience Design (XD) takes into account the physical, emotional and digital world. Both
-                        fields include the use of technology and design. In our humble opinion, it is safe to say that
-                        User Experience Design is a subset of Experience Design.
+                <div class="blog-conent" data-scroll="">
+                    <p class="text_anim">
+                        <span>
+                            In contrast, Experience design (XD) follows a more comprehensive directive. Experience
+                            Design is
+                            a discipline that creates expansive experiences for each & every user in all aspects of a
+                            product, service, or occasion. It looks at digital, physical, and indirect (family member,
+                            friends, family member) experiences from the end-user’s perspective. Experience design
+                            involves
+                            technology but generally considers more elements (like technology, environmental factors,
+                            spatial factors, physical objects) into consideration. Experience designers are holistic
+                            problem
+                            solvers who look at the entire brand ecosystem and focus on ‘moments of engagement,
+                            touchpoints,
+                            between people, and the ideas, feelings, and memories that these interactions create.’
+                        </span>
+                    </p>
+                    <p class="text_anim">
+                        <span>
+                            To summarise, the practice of User Experience (UX) Design focuses primarily on the digital
+                            world,
+                            and Experience Design (XD) takes into account the physical, emotional and digital world.
+                            Both
+                            fields include the use of technology and design. In our humble opinion, it is safe to say
+                            that
+                            User Experience Design is a subset of Experience Design.
+                        </span>
                     </p>
                 </div>
                 <!--                 
@@ -404,7 +455,7 @@
                 <section class="marquees" style="background: transparent;">
                     <a href="#">
                         <div class="marquees__inner black-strock" aria-hidden="true" ref="inner"
-                            data-cursor-text="Contact Us" data-cursor="-color-white -xlg">
+                            data-cursor-text="Contact Us" data-cursor="-color-white -lg">
 
                             <div class="marquees__part">
                                 GET TO KNOW US<img src="/assets/resources/img/footer-circle.svg" alt="" />
@@ -442,7 +493,7 @@
                             </div>
                         </div>
                         <div class="footer-flex">
-                      <div class="footer-right">
+                            <div class="footer-right">
                                 <a class="cb-outro-social-item" data-cursor="-opaque" href="about.html"><span
                                         class="cb-outro-social-item-title"><span
                                             data-text="About">About</span></span></a>
@@ -475,7 +526,7 @@
                                         </li>
                                         <li>
                                             <a href="" class="face"><span>
-                                                    <lottie-player class="so" src="Instagram-logo.json"
+                                                    <lottie-player class="so" src="Instagramlogo.json"
                                                         background="transparent" speed="1"
                                                         style="width: 20px; height: 20px;" hover></lottie-player>
                                                 </span></a>
@@ -728,7 +779,7 @@
     <script src="https://code.jquery.com/ui/1.12.0/jquery-ui.min.js"></script>
     <script
         src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui-touch-punch/0.2.3/jquery.ui.touch-punch.min.js"></script>
-   
+
     <script src="assets/resources/js/page.js"></script>
     <script src="assets/resources/js/others.js"></script>
 
