--- a/digital-marketing.html
+++ b/digital-marketing.html
@@ -299,13 +299,18 @@
                     <div class="el5 el-bg"></div>
                     <div class="el6 el-bg"></div>
                     <div class="top-h" data-scroll>
-                        <h1 class="text-rveal"><span>Digital</span></h1>
-                        <h1 class="text-end text-rveal"><span>Marketing</span></h1>
+                        <h1 class="text-rveal"><span class="header_title_line"><span>
+                                    Digital
+                                </span></span>
+                            <span class="right-align header_title_line"><span>
+                                    Marketing
+                                </span>
+                        </h1>
                         <!-- <div class="element">Why do you need design?</div> -->
                     </div>
                 </section>
                 <!-- sec -->
-                <section class="bol-prh" data-humcolor="#000" data-textcolor="#000">
+                <section class="bol-prh heigh_100 flex-cen" data-humcolor="#000" data-textcolor="#000">
                     <p class="opacity-0 p-s" data-scroll="" data-scroll-delay="0.10" data-scroll-offset="130">
                         We leverage the power of Emotion, Consumer Psychology & Technology to fabricate growth-oriented
                         marketing strategies that propel your success in the enigmatic realm of bits & bytes.
@@ -314,24 +319,34 @@
                 <!-- content -->
                 <section class="ser-c">
                     <div class="container">
-                        <div class="flex-con align-center ">
-                            <div class="left-d">
-                                <p class="opacity-0" data-scroll="" data-scroll-delay="0.10" data-scroll-offset="130">
-                                    <span> <img src="/assets/resources/img/Service-elements/quote-icon.svg" alt="" />
+                        <div class="flex-con align-center" data-scroll="">
+                            <div class="left-d text_anim">
+                                <p>
+                                    <span>
+                                        <span class="qou"> <img
+                                                src="/assets/resources/img/Service-elements/quote-icon.svg" alt="" />
+                                        </span>
+                                        We believe digital isn’t just the word of the moment. It is the way forward!
+                                        Combining this belief with our passion for creating state-ofthe-art digital
+                                        campaigns and captivating user experiences, we have evolved into an agency
+                                        capable
+                                        of adapting to the everchanging world of digital marketing.
                                     </span>
-                                    We believe digital isn’t just the word of the moment. It is the way forward!
-                                    Combining this belief with our passion for creating state-ofthe-art digital
-                                    campaigns and captivating user experiences, we have evolved into an agency capable
-                                    of adapting to the everchanging world of digital marketing.
                                 </p>
                             </div>
-                            <div class="right">
-                                <p class="opacity-0" data-scroll="" data-scroll-delay="0.10" data-scroll-offset="130">It
-                                    Transcending the boundaries of various digital mediums, we start by devising a
-                                    comprehensive digital strategy that encompasses a brand’s entire digital ecosystem.
-                                    Next, we create an action plan that takes full advantage of your budget and ensures
-                                    your goal is exceeded. Going beyond just showcasing your product/services, we focus
-                                    relentlessly on users’ needs and their behaviour to drive action.
+                            <div class="right text_anim">
+                                <p>
+                                    <span>
+                                        It
+                                        Transcending the boundaries of various digital mediums, we start by devising a
+                                        comprehensive digital strategy that encompasses a brand’s entire digital
+                                        ecosystem.
+                                        Next, we create an action plan that takes full advantage of your budget and
+                                        ensures
+                                        your goal is exceeded. Going beyond just showcasing your product/services, we
+                                        focus
+                                        relentlessly on users’ needs and their behaviour to drive action.
+                                    </span>
                                 </p>
                             </div>
                         </div>
@@ -340,9 +355,11 @@
 
                 <!-- Scroll Section -->
                 <div class="scroll-sec2" data-scroll data-humcolor="#fff">
-                    <div class="back-text text_anim">
-                        <h1 data-scroll="" data-scroll-speed="9" data-scroll-direction="horizontal"><span>Digital
-                                Marketing</span></h1>
+                    <div class="back-text ">
+                        <h1 class="opacity-0" data-scroll="" data-scroll-speed="9" data-scroll-direction="horizontal">
+                            <span>Digital
+                                Marketing</span>
+                        </h1>
                     </div>
                     <div class="container text_anim">
                         <h2><span>
@@ -367,7 +384,7 @@
                             </figure>
                         </div>
                     </div>
-                    <section class="ser-three">
+                    <section class="ser-three opacity-0" data-scroll="">
                         <div class="item" data-text="01">
                             <p>Understanding your business needs</p>
                         </div>
@@ -432,7 +449,7 @@
                                 with:
                             </span>
                         </p>
-                        <ul class="point">
+                        <ul class="point opacity-0" data-scroll="">
                             <li>Social Media Management</li>
                             <li>Media Planning & Buying</li>
                             <li>Content Creation & Curation</li>
@@ -453,7 +470,7 @@
                 <section class="marquees" style="background: transparent;">
                     <a href="#">
                         <div class="marquees__inner black-strock" aria-hidden="true" ref="inner"
-                            data-cursor-text="Contact Us" data-cursor="-color-white -xlg">
+                            data-cursor-text="Contact Us" data-cursor="-color-white -lg">
 
                             <div class="marquees__part">
                                 LETS WORK TOGETHER<img src="/assets/resources/img/footer-circle.svg" alt="" />
@@ -491,7 +508,7 @@
                             </div>
                         </div>
                         <div class="footer-flex">
-                      <div class="footer-right">
+                            <div class="footer-right">
                                 <a class="cb-outro-social-item" data-cursor="-opaque" href="about.html"><span
                                         class="cb-outro-social-item-title"><span
                                             data-text="About">About</span></span></a>
@@ -778,7 +795,7 @@
     <script src="https://code.jquery.com/ui/1.12.0/jquery-ui.min.js"></script>
     <script
         src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui-touch-punch/0.2.3/jquery.ui.touch-punch.min.js"></script>
-   
+
     <script src="assets/resources/js/page.js"></script>
     <script src="assets/resources/js/others.js"></script>
 
