--- a/index.html
+++ b/index.html
@@ -1032,6 +1032,29 @@
 
                                     </div>
                                     <!--/Project-->
+                                    <!--Project-->
+                                    <div class="ar-work" data-tilt data-tilt-glare="true" data-tilt-max="30"
+                                        data-tilt-speed="20" data-cursor-text="View" data-cursor="-color-ystart">
+                                        <!--Project URL-->
+                                        <a href="">
+                                            <!--Project Image-->
+                                            <div class="ar-work-image o-image" data-scroll>
+                                                <img alt="Project Image" src="/assets/resources/img/work-kedar.jpg">
+                                            </div>
+                                            <!--/Project Image-->
+
+                                            <!--Project Title-->
+                                            <div class="ar-work-title c-speed-block_title" data-scroll="">Kedarkala
+                                            </div>
+                                            <!--/Project Title-->
+
+                                            <!--Project Category-->
+                                            <div class="ar-work-cat c-speed-block_title" data-scroll="">Branding</div>
+                                            <!--/Project Category-->
+                                        </a>
+
+                                    </div>
+                                    <!--/Project-->
                                 </div>
                                 <!--/Works Wrapper-->
                             </div>
