--- a/interface-design.html
+++ b/interface-design.html
@@ -310,7 +310,7 @@
                     </div>
                 </section>
                 <!-- sec -->
-                <section class="bol-prh heigh_100" data-humcolor="#000" data-textcolor="#000">
+                <section class="bol-prh heigh_100 flex-cen" data-humcolor="#000" data-textcolor="#000">
                     <p class="opacity-0 p-s" data-scroll="" data-scroll-delay="0.10" data-scroll-offset="130">
                         We bridge the gap between the physical & digital world to build delightful & intuitive
                         experiences that increase revenues, conversion rates and customer loyalty. As they say –
