--- a/technology-development.html
+++ b/technology-development.html
@@ -302,7 +302,7 @@
                         <h1 class="text-rveal"><span class="header_title_line"><span>
                                     Technology
                                 </span></span>
-                            <span class="h1-r header_title_line"><span>
+                            <span class="h1-r6 header_title_line"><span>
                                     Development
                                 </span>
                         </h1>
@@ -310,7 +310,7 @@
                     </div>
                 </section>
                 <!-- sec -->
-                <section class="bol-prh heigh_100" data-humcolor="#000" data-textcolor="#000">
+                <section class="bol-prh heigh_100 flex-cen" data-humcolor="#000" data-textcolor="#000">
                     <p class="opacity-0 p-s" data-scroll="" data-scroll-delay="0.10" data-scroll-offset="130">
                         A design-led approach to product development that leverages cutting-edge technologies & agile
                         methodology, committed to putting you on a path to success in the ever-changing technological
